# desktop-sdk

./: README.md
ChromiumBasedEditors/app/install/deb/onlyoffice-desktopeditor/debian/: copyright
ChromiumBasedEditors/lib/: CMakeLists.txt  helper_main.cpp
ChromiumBasedEditors/lib/include/: applicationmanager.h  applicationmanager_events.h  base.h  cefapplication.h  cefview.h  keyboardchecker.h  keychain.h  mac_application.h  mac_cefview.h  nsascprinter.h  spellchecker.h
ChromiumBasedEditors/lib/qt_wrapper/: CMakeLists.txt
ChromiumBasedEditors/lib/qt_wrapper/include/: qascapplicationmanager.h  qascprinter.h  qcefview.h  qcefview_media.h  qdpichecker.h  qexternalmessageloop.h
ChromiumBasedEditors/lib/qt_wrapper/qrenderer/include/: qrenderer.h
ChromiumBasedEditors/lib/qt_wrapper/qrenderer/src/: qrenderer.cpp
ChromiumBasedEditors/lib/qt_wrapper/src/: qascapplicationmanager.cpp  qascprinter.cpp  qcefview.cpp  qcefview_media.cpp  qdpichecker.cpp  qexternalmessageloop.cpp
ChromiumBasedEditors/lib/src/: Logger.h  applicationmanager.cpp  applicationmanager_p.h  cefapplication.cpp  ceffiledownloader.h  cefview.cpp  cloud_crypto.h  cookiesworker.h  cors_resource_hanler.h  crypto_mode.cpp  crypto_mode.h  fileconverter.h  filelocker.cpp  filelocker.h  fileprinter.cpp  fileprinter.h  keyboardchecker.cpp  keychain.cpp  mac_application.mm  mailto.h  plugins.h  plugins_resources.h  providers.h  spellchecker.cpp  templatesmanager.h  utils.h  widget_impl.mm  window_handle.cpp  window_handle.h  window_handle.mm  x2t.h
ChromiumBasedEditors/lib/src/additional/: create.cpp  manager.h  renderer.h
ChromiumBasedEditors/lib/src/cefwrapper/: client_app.h  client_renderer.h  client_renderer_params.h  client_renderer_wrapper.cpp  client_resource_handler_async.cpp  client_resource_handler_async.h  client_scheme.h  client_scheme_wrapper.cpp
ChromiumBasedEditors/lib/src/linux_dropdata/: drop_data.js
ChromiumBasedEditors/lib/src/polyfill/: optional
ChromiumBasedEditors/lib/tools/: tools.cpp  tools.h
ChromiumBasedEditors/plugins/ai-agent/: .gitignore  ai-agent.code-workspace  biome.json  changelog.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
ChromiumBasedEditors/plugins/ai-agent/deploy/{9DC93CDB-B576-4F0C-B55E-FCC9C48DD777}/: blade.js  config.json  fortran-fixed-form.js  index.css  index.js  marko.js  razor.js  svelte.js  vue-html.js  vue-vine.js  vue.js
ChromiumBasedEditors/plugins/ai-agent/e2e/fixtures/: mock-responses.ts  test-data.ts  test.fixture.ts
ChromiumBasedEditors/plugins/ai-agent/e2e/pages/: base.page.ts  chat.page.ts  settings.page.ts
ChromiumBasedEditors/plugins/ai-agent/e2e/tests/: empty-page.spec.ts  mcp-servers.spec.ts  providers.spec.ts  screenshot.spec.ts  smoke.spec.ts  web-search.spec.ts
ChromiumBasedEditors/plugins/ai-agent/e2e/utils/: helpers.ts  storage.ts
ChromiumBasedEditors/plugins/ai-agent/scripts/: move.js
ChromiumBasedEditors/plugins/ai-agent/src/: App.tsx  i18n.ts  index.css  index.d.ts  main.tsx  vite-env.d.ts
ChromiumBasedEditors/plugins/ai-agent/src/components/assistant-ui/: shiki-highlighter.tsx  styles.css
ChromiumBasedEditors/plugins/ai-agent/src/components/button/: Button.utils.tsx  index.tsx
ChromiumBasedEditors/plugins/ai-agent/src/components/checkbox/: index.tsx
ChromiumBasedEditors/plugins/ai-agent/src/components/combo-box/: index.tsx
ChromiumBasedEditors/plugins/ai-agent/src/components/dropdown/: index.tsx
ChromiumBasedEditors/plugins/ai-agent/src/components/dropdown-item/: DropDownItem.types.tsx  index.tsx
ChromiumBasedEditors/plugins/ai-agent/src/components/field-container/: index.tsx
ChromiumBasedEditors/plugins/ai-agent/src/components/file-item/: index.tsx
ChromiumBasedEditors/plugins/ai-agent/src/components/icon/: index.tsx
ChromiumBasedEditors/plugins/ai-agent/src/components/icon-button/: IconButton.types.ts  index.tsx
ChromiumBasedEditors/plugins/ai-agent/src/components/input/: index.tsx
ChromiumBasedEditors/plugins/ai-agent/src/components/layout/: index.tsx
ChromiumBasedEditors/plugins/ai-agent/src/components/loader/: index.tsx
ChromiumBasedEditors/plugins/ai-agent/src/components/manage-tool-dialog/: index.tsx
ChromiumBasedEditors/plugins/ai-agent/src/components/markdown/: Markdown.utils.tsx  index.tsx
ChromiumBasedEditors/plugins/ai-agent/src/components/radio-button/: RadioButton.types.ts  index.tsx
ChromiumBasedEditors/plugins/ai-agent/src/components/tabs/: index.tsx
ChromiumBasedEditors/plugins/ai-agent/src/components/toggle-button/: index.tsx
ChromiumBasedEditors/plugins/ai-agent/src/database/: messages.ts  threads.ts
ChromiumBasedEditors/plugins/ai-agent/src/hooks/: useDirection.ts  useMessages.ts  useServers.ts  useThreads.ts
ChromiumBasedEditors/plugins/ai-agent/src/lib/: constants.ts  images.ts  types.ts  utils.ts
ChromiumBasedEditors/plugins/ai-agent/src/providers/: base.ts  errors.ts  index.ts  registry.ts
ChromiumBasedEditors/plugins/ai-agent/src/servers/: CustomServers.ts  WebSearch.ts  index.ts
ChromiumBasedEditors/plugins/ai-agent/src/store/: useAttachmentsStore.ts  useMessageStore.ts  useModelsStore.ts  useProviders.ts  useServersStore.ts  useThemeStore.ts  useThreadsStore.ts
ChromiumBasedEditors/plugins/ai-agent/src/styles/: theme-classic-light.css  theme-contrast-dark.css  theme-dark.css  theme-gray.css  theme-light.css  theme-night.css  theme-white.css
ChromiumBasedEditors/plugins/ai-agent/src/translations/: ar-SA.json  be.json  bg.json  ca.json  cs.json  da.json  de.json  el.json  en.json  es.json  fi.json  fr.json  gl.json  he.json  hu.json  hy.json  id.json  it.json  ja.json  ko.json  lv.json  nl.json  no.json  pl.json  pt-BR.json  pt-PT.json  ro.json  ru.json  sk.json  sl.json  sq-AL.json  sr-Cyrl.json  sr-Latn.json  sv.json  tr.json  uk.json  ur.json  vi.json  zh-TW.json  zh.json
ChromiumBasedEditors/videoplayerlib/: CMakeLists.txt
ChromiumBasedEditors/videoplayerlib/src/: qascvideoview.cpp
HtmlFile/Internal/src/: client_app.h  client_renderer_wrapper.cpp  clienthandler.h  main.cpp
(+116 files in other folders)
